# mangosteen_code

./: .gitignore  CMakeLists.txt  README.md  cleanup.sh  configuration.h  mangosteen_instrumentation.c  mangosteen_instrumentation.h  proc_out.py  run_ms_queue.py  run_queue_bench.py  state.h  stop_processes.sh
back-end/: back_end.c  back_end.h
examples/KVStoreStateMachine/: CMakeLists.txt  kv_state_machine.c  kv_state_machine.h
examples/cpp_state_machine/: CMakeLists.txt  state_machine.cpp
examples/harris_linked_list/: CMakeLists.txt  harris_list.cpp  ssmem_wrapper.hpp
examples/mangosteen_local/: CMakeLists.txt  local_state_machine.c
examples/mangosteen_local/include/: mangosteen_instrumentation.h
examples/mangosteen_local_multi_thread/: CMakeLists.txt  local_state_machine_multithread.c
examples/mangosteen_rpc/rpc_state_machine/: CMakeLists.txt  client_rpc.cpp  state_machine_rpc.cpp
examples/ms_lock_based_queue/: CMakeLists.txt  ms_lock_queue.cpp
examples/ms_lock_free_queue/: CMakeLists.txt  ms_lock_free.cpp
examples/queue/: CMakeLists.txt  queue.c  queue.cpp
examples/queue_benchmarks/: CMakeLists.txt  IQueue.h  QueueA.h  QueueAWrapper.h  README.md  bench.cpp  node.h
flat_combining/: common.h  dr_annotations.c  dr_annotations.h  flat_combining.c  flat_combining.h  writer_preference_spin_lock.c  writer_preference_spin_lock.h
front-end/: front_end.c  front_end.h
hash_set/: hash_set.c  hash_set.h
instrumentation/: CMakeLists.txt  instrumenation_common.h  instrument_front_end.c  instrument_front_end.h  redo_entry_collector.c  redo_entry_collector.h
netutils/: netutils.c  netutils.h
region_table/: region_table.c  region_table.h
ring_buffer/: ring_buffer.c  ring_buffer.h
transient_allocator/: CMakeLists.txt  transient_allocator.c  transient_allocator.h
